Modified templates Folder

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row padding-top-4">
+    <div class="row">
         <div class="col-1-0f-3 copyrite">All Rights Reserved &copy; 2021 Jim Daniels Wasswa</div>
         <div class="col-2-of-3">
             <ul class="footer-nav">
