--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -38,7 +38,7 @@
                         <a href="#contact-modal" class="link nav-link">Contact-Us</a>
                     </li>
                 </ul>                
-                <a href="/login" class="admin-access link nav-link pull-right"><i class="fa fa-cog"></i></a>
+                <a href="#login-modal" class="admin-access link nav-link pull-right"><i class="fa fa-cog"></i></a>
             </nav>
         </div>
     </div>
