--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" type="text/css" href="styles/css/about.css" />
+<link rel="stylesheet" type="text/css" href="/static/styles/css/about.css" />
 <div class="row">
     <div class="col-2-0f-4">
         <aside class="about-aside">
-            <img src="../styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="about us image"
+            <img src="/static/styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="about us image"
                 class="img-responive" />
         </aside>
     </div>
