--- a/templates/views/gallery.hbs
+++ b/templates/views/gallery.hbs
@@ -1,68 +1,89 @@
-<link rel="stylesheet" type="text/css" href="styles/css/gallery.css" />
+<link rel="stylesheet" type="text/css" href="/static/styles/css/gallery.css" />
+<div class="row">
+    {{#each pageImages}}
+    <div class="col-1-0f-4">
+        <div class="gallery-image-container">
+            <img class="gallery-image" src="/page-content/{{this._id}}/image" alt="" srcset="" />
+        </div>
+    </div>
+    {{/each}}
+</div>
+{{!-- <div class="row">
+    <div class="col-1-0f-4">
+        <div class="gallery-image-container">
+            <img class="gallery-image" src="/static/styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg"
+                alt="" srcset="" />
+        </div>
+    </div>
+    <div class="col-1-0f-4">
+        <div class="gallery-image-container">
+            <img class="gallery-image" src="/static/styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt=""
+                srcset="" />
+        </div>
+    </div>
+    <div class="col-1-0f-4">
+        <div class="gallery-image-container">
+            <img class="gallery-image" src="/static/styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt=""
+                srcset="" />
+        </div>
+    </div>
+    <div class="col-1-0f-4">
+        <div class="gallery-image-container">
+            <img class="gallery-image" src="/static/styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt=""
+                srcset="" />
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt=""
+            <img class="gallery-image" src="/static/styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt=""
                 srcset="" />
         </div>
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt=""
+            <img class="gallery-image" src="/static/styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt=""
                 srcset="" />
         </div>
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt="" srcset="" />
+            <img class="gallery-image" src="/static/styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg"
+                alt="" srcset="" />
         </div>
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt="" srcset="" />
-        </div>
-    </div>
-    <div class="col-1-0f-4">
-        <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt="" srcset="" />
-        </div>
-    </div>
-    <div class="col-1-0f-4">
-        <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="" srcset="" />
-        </div>
-    </div>
-    <div class="col-1-0f-4">
-        <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt=""
+            <img class="gallery-image" src="/static/styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt=""
                 srcset="" />
         </div>
     </div>
+</div>
+<div class="row">
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt=""
+            <img class="gallery-image" src="/static/styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt=""
                 srcset="" />
-        </div>
-    </div>
-    <div class="col-1-0f-4">
-        <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt="" srcset="" />
         </div>
 
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt="" srcset="" />
+            <img class="gallery-image" src="/static/styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt=""
+                srcset="" />
         </div>
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt="" srcset="" />
+            <img class="gallery-image" src="/static/styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt=""
+                srcset="" />
         </div>
     </div>
     <div class="col-1-0f-4">
         <div class="gallery-image-container">
-            <img class="gallery-image" src="../styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="" srcset="" />
+            <img class="gallery-image" src="/static/styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt=""
+                srcset="" />
         </div>
     </div>
-</div>
+</div> --}}
