--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="styles/css/index.css" />
+<link rel="stylesheet" type="text/css" href="/static/styles/css/index.css" />
 <div class="heading-spotlight">
     <h3 class="heading-tertiary animated-text-rigt-to-left">Bite of your life!</h3>
 </div>
