--- a/templates/views/admin-login.hbs
+++ b/templates/views/admin-login.hbs
@@ -1,7 +1,4 @@
 <style>
-    main {
-        height: 100%;
-    }
     .heading-tertiary {
         color: #ffffff;
         font-size: 2.5rem;
@@ -15,7 +12,7 @@
 <div class="login-form">
     <h3 class="heading-tertiary">Login</h3>
     <hr class="divider" />
-    <form action="/login" method="POST">
+    <form method="POST" action="/login">
         <div class="control-group">
             <label for="username" class="control-label">Username</label>
             <input type="text" name="username" id="username" class="control" placeholder="Username" />
@@ -26,7 +23,7 @@
         </div>
         <div class="control-group"></div>
         <div class="control-group text-center">
-            <input type="submit" value="Login" class="btn btn-primary" />
+            <button class="btn btn-primary">Login</button>
         </div>
     </form>
 </div>
