--- a/templates/views/menu.hbs
+++ b/templates/views/menu.hbs
@@ -1,9 +1,28 @@
-<link rel="stylesheet" type="text/css" href="styles/css/menu.css" />
+<link rel="stylesheet" type="text/css" href="/static/styles/css/menu.css" />
 <div class="row">
+    {{#each menuItems}}
     <div class="col-2-0f-4 padding-x5 clear-fix">
         <div class="row menu-item border-primary-x2">
             <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="" class="menu-item-photo">
+                <img src="/menu-item/{{_id}}/image" alt="" class="menu-item-photo">
+            </div>
+
+            <div class="col-3-0f-4 menu-item-details">
+                <h4 class="menu-item-name sub-heading">{{itemname}}</h4>
+                <p class="menu-item-description">
+                   {{description}}
+                </p>
+                <span class="menu-item-price">${{_divideby100 price}}</span>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+</div>
+{{!-- <div class="row">
+    <div class="col-2-0f-4 padding-x5 clear-fix">
+        <div class="row menu-item border-primary-x2">
+            <div class="col-1-0f-4 menu-item-photo-container">
+                <img src="/static/styles/images/max-delsid-oBwnHsjCx9A-unsplash.jpg" alt="" class="menu-item-photo">
             </div>
 
             <div class="col-3-0f-4 menu-item-details">
@@ -18,68 +37,7 @@
     <div class="col-2-0f-4 padding-x5 clear-fix">
         <div class="row menu-item border-primary-x2">
             <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt="" class="menu-item-photo">
-            </div>
-
-            <div class="col-3-0f-4 menu-item-details">
-                <h4 class="menu-item-name sub-heading">Beef</h4>
-                <p class="menu-item-description">
-                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
-                </p>
-                <span class="menu-item-price">$99.99</span>
-            </div>
-        </div>
-    </div>
-    <div class="col-2-0f-4 padding-x5 clear-fix">
-        <div class="row menu-item border-primary-x2">
-            <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt="" class="menu-item-photo">
-            </div>
-
-            <div class="col-3-0f-4 menu-item-details">
-                <h4 class="menu-item-name sub-heading">Beef</h4>
-                <p class="menu-item-description">
-                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
-                </p>
-                <span class="menu-item-price">$99.99</span>
-            </div>
-        </div>
-    </div>
-    <div class="col-2-0f-4 padding-x5 clear-fix">
-        <div class="row menu-item border-primary-x2">
-            <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt="" class="menu-item-photo">
-            </div>
-
-            <div class="col-3-0f-4 menu-item-details">
-                <h4 class="menu-item-name sub-heading">Beef</h4>
-                <p class="menu-item-description">
-                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
-                </p>
-                <span class="menu-item-price">$99.99</span>
-            </div>
-        </div>
-    </div>
-    <div class="col-2-0f-4 padding-x5 clear-fix">
-        <div class="row menu-item border-primary-x2">
-            <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt="" class="menu-item-photo">
-            </div>
-
-            <div class="col-3-0f-4 menu-item-details">
-                <h4 class="menu-item-name sub-heading">Beef</h4>
-                <p class="menu-item-description">
-                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
-                </p>
-                <span class="menu-item-price">$99.99</span>
-            </div>
-        </div>
-    </div>
-    <div class="col-2-0f-4 padding-x5 clear-fix">
-        <div class="row menu-item border-primary-x2">
-            <div class="col-1-0f-4 menu-item-photo-container">
-                <img src="../styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt=""
-                    class="menu-item-photo">
+                <img src="/static/styles/images/luis-aleman-clprKxC96ys-unsplash.jpg" alt="" class="menu-item-photo">
             </div>
 
             <div class="col-3-0f-4 menu-item-details">
@@ -92,3 +50,68 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-2-0f-4 padding-x5 clear-fix">
+        <div class="row menu-item border-primary-x2">
+            <div class="col-1-0f-4 menu-item-photo-container">
+                <img src="/static/styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt="" class="menu-item-photo">
+            </div>
+
+            <div class="col-3-0f-4 menu-item-details">
+                <h4 class="menu-item-name sub-heading">Beef</h4>
+                <p class="menu-item-description">
+                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
+                </p>
+                <span class="menu-item-price">$99.99</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-2-0f-4 padding-x5 clear-fix">
+        <div class="row menu-item border-primary-x2">
+            <div class="col-1-0f-4 menu-item-photo-container">
+                <img src="/static/styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg" alt="" class="menu-item-photo"/>
+            </div>
+
+            <div class="col-3-0f-4 menu-item-details">
+                <h4 class="menu-item-name sub-heading">Beef</h4>
+                <p class="menu-item-description">
+                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
+                </p>
+                <span class="menu-item-price">$99.99</span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-2-0f-4 padding-x5 clear-fix">
+        <div class="row menu-item border-primary-x2">
+            <div class="col-1-0f-4 menu-item-photo-container">
+                <img src="/static/styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt="" class="menu-item-photo">
+            </div>
+
+            <div class="col-3-0f-4 menu-item-details">
+                <h4 class="menu-item-name sub-heading">Beef</h4>
+                <p class="menu-item-description">
+                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
+                </p>
+                <span class="menu-item-price">$99.99</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-2-0f-4 padding-x5 clear-fix">
+        <div class="row menu-item border-primary-x2">
+            <div class="col-1-0f-4 menu-item-photo-container">
+                <img src="/static/styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt=""
+                    class="menu-item-photo">
+            </div>
+
+            <div class="col-3-0f-4 menu-item-details">
+                <h4 class="menu-item-name sub-heading">Beef</h4>
+                <p class="menu-item-description">
+                    Spieced with pepper and beef seasoning, the beef will wow your mouth.
+                </p>
+                <span class="menu-item-price">$99.99</span>
+            </div>
+        </div>
+    </div>
+</div> --}}
