--- a/templates/views/services.hbs
+++ b/templates/views/services.hbs
@@ -1,9 +1,54 @@
-<link rel="stylesheet" type="text/css" href="styles/css/services.css" />
+<link rel="stylesheet" type="text/css" href="/static/styles/css/services.css" />
+{{#each serviceItems}}
+<div class="row border-primary-x2">
+    <div class="col-1-0f-4">
+        <div class="service-image-container">
+            <img class="service-image image-responsive" src="/service-item/{{_id}}/image" alt="service photo">
+        </div>
+    </div>
+    <div class="col-3-0f-4">
+        <div class="service-details">
+            <h2 class="heading-secondary padding-bottom-2">{{itemname}}</h2>
+            <p class="subtext-2 padding-top-2 padding-bottom-2 service-details-body">
+                {{description}}
+            </p>
+            <div class="service-price">
+                Starting From ${{_divideby100 startprice}}
+            </div>
+        </div>
+    </div>
+</div>
+
+{{/each}}
+
+{{!-- <div class="row border-primary-x2">
+    <div class="col-1-0f-4">
+        <div class="service-image-container">
+            <img class="service-image image-responsive"
+                src="/static/styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt="">
+        </div>
+    </div>
+    <div class="col-3-0f-4">
+        <div class="service-details">
+            <h2 class="heading-secondary padding-bottom-2">Weddings</h2>
+            <p class="subtext-2 padding-top-2 padding-bottom-2 service-details-body">
+                We are dedicated to make your day even more special by providing you with a custom menu
+                of meals
+                made especially for you. If you are a meat lover, then look no further for you have hit
+                the mother load of
+                delicious.
+            </p>
+            <div class="service-price">
+                Starting From $1000
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row border-primary-x2">
     <div class="col-1-0f-4">
         <div class="service-image-container">
             <img class="service-image image-responsive"
-                src="../styles/images/alexandru-bogdan-ghita-UeYkqQh4PoI-unsplash.jpg" alt="">
+                src="/static/styles/images/justus-menke-62XLglIrTJc-unsplash.jpg" alt="">
         </div>
     </div>
     <div class="col-3-0f-4">
@@ -25,7 +70,7 @@
 <div class="row border-primary-x2">
     <div class="col-1-0f-4">
         <div class="service-image-container">
-            <img class="service-image image-responsive" src="../styles/images/justus-menke-62XLglIrTJc-unsplash.jpg"
+            <img class="service-image image-responsive" src="/static/styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg"
                 alt="">
         </div>
     </div>
@@ -48,8 +93,8 @@
 <div class="row border-primary-x2">
     <div class="col-1-0f-4">
         <div class="service-image-container">
-            <img class="service-image image-responsive" src="../styles/images/jon-tyson-kctt4tL1dkE-unsplash.jpg"
-                alt="">
+            <img class="service-image image-responsive"
+                src="/static/styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg" alt="">
         </div>
     </div>
     <div class="col-3-0f-4">
@@ -67,27 +112,4 @@
             </div>
         </div>
     </div>
-</div>
-<div class="row border-primary-x2">
-    <div class="col-1-0f-4">
-        <div class="service-image-container">
-            <img class="service-image image-responsive" src="../styles/images/emerson-vieira-3wzps8KbdCQ-unsplash.jpg"
-                alt="">
-        </div>
-    </div>
-    <div class="col-3-0f-4">
-        <div class="service-details">
-            <h2 class="heading-secondary padding-bottom-2">Weddings</h2>
-            <p class="subtext-2 padding-top-2 padding-bottom-2 service-details-body">
-                We are dedicated to make your day even more special by providing you with a custom menu
-                of meals
-                made especially for you. If you are a meat lover, then look no further for you have hit
-                the mother load of
-                delicious.
-            </p>
-            <div class="service-price">
-                Starting From $1000
-            </div>
-        </div>
-    </div>
-</div>
+</div> --}}
