Implemented Authentication with Passport js

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -3,14 +3,14 @@
         <div class="col-1-0f-3 copyrite">All Rights Reserved &copy; 2021 Jim Daniels Wasswa</div>
         <div class="col-2-of-3">
             <ul class="footer-nav">
-                <li><a href="#" class="link social-media"><i class="fab fa-facebook-f fa-2x"></i>Facebook</a>
+                <li><a href="#" class="link social-media"><i class="fa fa-facebook-f fa-2x"></i>Facebook</a>
                 </li>
-                <li><a href="#" class="link social-media"><i class="fab fa-twitter fa-2x"></i>Twitter</a></li>
-                <li><a href="#" class="link social-media"><i class="fab fa-pinterest-p fa-2x"></i>Pinterest</a>
+                <li><a href="#" class="link social-media"><i class="fa fa-twitter fa-2x"></i>Twitter</a></li>
+                <li><a href="#" class="link social-media"><i class="fa fa-pinterest-p fa-2x"></i>Pinterest</a>
                 </li>
-                <li><a href="#" class="link social-media"><i class="fab fa-google-plus-g fa-2x"></i>Google
+                <li><a href="#" class="link social-media"><i class="fa fa-google-plus fa-2x"></i>Google
                         Plus</a></li>
-                <li><a href="#" class="link social-media"><i class="fab fa-linkedin-in fa-2x"></i>LinkedIn</a>
+                <li><a href="#" class="link social-media"><i class="fa fa-linkedin fa-2x"></i>LinkedIn</a>
                 </li>
             </ul>
         </div>
