--- a/templates/views/reservations.hbs
+++ b/templates/views/reservations.hbs
@@ -45,7 +45,7 @@
     <div class="modal-content">
         <div class="modal-header clear-fix">
             <h3 class="modal-heading" id="reason-modal-heading"></h3>
-            <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+            <a class="modal-close" href="#"><i class="fa fa-remove"></i></a>
         </div>
         <div class="modal-body">
             <div class="new-reason-form">
