--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -37,8 +37,13 @@
                     <li>
                         <a href="#contact-modal" class="link nav-link">Contact-Us</a>
                     </li>
-                </ul>                
-                <a href="#login-modal" class="admin-access link nav-link pull-right"><i class="fa fa-cog"></i></a>
+                </ul>                         
+                {{#if (_isdefined auth)}}
+                    <a class="admin-access link nav-link pull-right" id="logout"><i class="fa fa-sign-out"></i></a>
+                {{/if}}     
+                {{#if (_isundefined auth)}}
+                    <a href="#login-modal" class="admin-access link nav-link pull-right"><i class="fa fa-cog"></i></a>  
+                {{/if}}            
             </nav>
         </div>
     </div>
