--- a/templates/views/admin-master.hbs
+++ b/templates/views/admin-master.hbs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beefup</title>
     <link rel="stylesheet" href="/static/styles/css/flatpickr.min.css" />
-    <link rel="stylesheet" href="/static/styles/css/fontawesome-all.min.css" />
+    {{!-- <link rel="stylesheet" href="/static/styles/css/fontawesome-all.min.css" /> --}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/css/main.css" />
     <link rel="stylesheet" type="text/css" href="/static/styles/css/grid.css" />
 </head>
@@ -38,7 +39,7 @@
         <div class="modal-content">
             <div class="modal-header clear-fix">
                 <h3 class="modal-heading">Contact Us</h3>
-                <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+                <a class="modal-close" href="#"><i class="fa fa-remove"></i></a>
             </div>
             <div class="modal-body">
                 <div class="contact-form">
@@ -76,7 +77,7 @@
         <div class="modal-content">
             <div class="modal-header clear-fix">
                 <h3 class="modal-heading">Book A Table</h3>
-                <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+                <a class="modal-close" href="#"><i class="fa fa-remove"></i></a>
             </div>
             <div class="modal-body">
                 <div class="reservation-form">
@@ -122,12 +123,12 @@
         <div class="modal-content">
             <div class="modal-header clear-fix">
                 <h3 class="modal-heading">Login</h3>
-                <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+                <a class="modal-close" href="#"><i class="fa fa-remove"></i></a>
             </div>
             <div class="modal-body">
                 <div class="login-form">
-                    <h3 class="heading-tertiary">Login</h3>
-                    <form method="POST" action="/login">
+                    <div class="error" id="login-errors"></div>
+                    <form id="login-form">
                         <div class="control-group">
                             <label for="username" class="control-label">Username</label>
                             <input type="text" name="username" id="username" class="control" placeholder="Username" />
@@ -151,7 +152,7 @@
             <div class="modal-content">
                 <div class="modal-header clear-fix">
                     <h3 class="modal-heading"></h3>
-                    <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+                    <a class="modal-close" href="#"><i class="fa fa-remove"></i></a>
                 </div>
                 <div class="modal-body">
 
