--- a/templates/views/menuitems.hbs
+++ b/templates/views/menuitems.hbs
@@ -50,7 +50,7 @@
     <div class="modal-content">
         <div class="modal-header clear-fix">
             <h3 class="modal-heading" id="menu-item-modal-heading"></h3>
-            <a class="modal-close" href="#"><i class="fas fa-times"></i></a>
+            <a class="modal-close" href="#"><i class="fa "></i></a>
         </div>
         <div class="modal-body">
             <div class="new-menu-item-form">
