--- a/templates/views/master.hbs
+++ b/templates/views/master.hbs
@@ -113,7 +113,7 @@
             </div>
             <div class="modal-body">
                 <div class="login-form">
-                    <div class="error" id="login-errors"></div>
+                    <div class="text-error" id="login-errors"></div>
                     <form id="login-form">
                         <div class="control-group">
                             <label for="username" class="control-label">Username</label>
