--- a/templates/views/menuitems.hbs
+++ b/templates/views/menuitems.hbs
@@ -55,7 +55,7 @@
         <div class="modal-body">
             <div class="new-menu-item-form">
                 <span id="error-span" class="text-error"></span>
-                <form method="POST" action="/menu-items/" enctype="multipart/form-data" id="menu-item-form">
+                <form enctype="multipart/form-data" id="menu-item-form">
                     <input type="hidden" name="menu-item-id" value="0" />
                     <div class="control-group">
                         <label for="itemname" class="control-label">Item Name</label>
@@ -68,8 +68,8 @@
                             required="required" min="1.0" />
                     </div>
                     <div class="control-group">
-                        <label for="menu-image" class="control-label">Image</label>
-                        <input type="file" name="menu-image" id="menu-image" class="control" placeholder="Image"
+                        <label for="menuimage" class="control-label">Image</label>
+                        <input type="file" name="menuimage" id="menuimage" class="control" placeholder="Image"
                             required="required" />
                     </div>
                     <div class="control-group">
@@ -78,7 +78,7 @@
                             placeholder="Additional Details" minlength="5" required="required"></textarea>
                     </div>
                     <div class="control-group text-center">
-                        <input id="submit" name="submit" type="submit" value="Save" class="btn btn-primary"/>
+                        <input id="save-btn" name="save-btn" type="submit" value="Save" class="btn btn-primary" data-action="" />
                     </div>
                 </form>
             </div>
