--- a/templates/views/users.hbs
+++ b/templates/views/users.hbs
@@ -47,7 +47,7 @@
         <div class="modal-body">
             <div class="new-user-form">
                 <span id="error-span" class="text-error"></span>
-                <form method="POST" action="" enctype="application/json" id="user-form">
+                <form id="user-form">
                     <input type="hidden" name="user_id" value="0" />
                     <div class="control-group">
                         <label for="username" class="control-label">Username</label>
@@ -76,7 +76,7 @@
                         </label>
                     </div>
                     <div class="control-group text-center">
-                        <input id="submit" name="submit" type="submit" value="Save" class="btn btn-primary"
+                        <input id="save-btn" name="save-btn" type="submit" value="Save" class="btn btn-primary"
                             data-action="" />
                     </div>
                 </form>
