Removed Login Text.

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -42,7 +42,7 @@
                     <a class="admin-access link nav-link pull-right" id="logout"><i class="fa fa-sign-out"></i></a>
                 {{/if}}     
                 {{#if (_isundefined auth)}}
-                    <a href="#login-modal" class="admin-access link nav-link pull-right"><i class="fa fa-cog"> Login</i></a>  
+                    <a href="#login-modal" class="admin-access link nav-link pull-right"><i class="fa fa-cog"></i></a>  
                 {{/if}}            
             </nav>
         </div>
